Backend y front mejorados